# case-study-2

./: .env.example  .gitignore  README.md  dashboard.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2419eded98e6_add_external_signals_table.py  295162a291d9_add_cs2_evidence_tables.py  f88633c59ce0_initial_schema.py
app/: config.py  database.py  main.py
app/core/: config_loader.py  github_config.py  keywords.py  patent_config.py
app/database/: init.py
app/databasey/: init.py  seed.py
app/models/: __init__.py  assessment.py  company.py  dimension.py  enums.py  evidence.py  industry.py  pagination.py  signal.py
app/pipelines/: github_scanner.py  job_signal_collector.py  linkedin_fallback.py  patent_scanner.py  sec_chunker.py  sec_integration.py  sec_parser.py
app/routers/: assessments.py  companies.py  dimensions.py  documents.py  evidence.py  health.py  signals.py
app/services/: evidence_storage.py  job_signal_service.py  redis_cache.py  signal_aggregation.py  snowflake.py
config/: companies.yml  github_orgs.yml  keywords.yml  patent_config.yml
docker/: .dockerignore  Dockerfile  docker-compose.yml
infra/terraform/snowflake/: infrastructure.tf  main.tf  outputs.tf  variables.tf
scripts/: collect_evidence.py  run_github_pipeline.py  run_job_pipeline.py  run_patent_pipeline.py  run_sec_pipeline.py
tests/: test_api.py  test_cs2_api.py  test_cs2_schema.py  test_evidence_models.py  test_snowflake_service.py
